--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <h1 id="count">People entered :</h1>
+    <h1 id="count">People entered :</h1>
     <h2 id="count-el">0</h2>
     <button  id="increment-btn" onclick="increment()">INCREMENT</button>
-    <button id="save-btn" onclick="save()">SAVE</button> -->
+    <button id="save-btn" onclick="save()">SAVE</button>
+    <p id="save-el">Previous Entries: </p>
 
-    <p id="welcome-el"></p>
 
 
    <script src="script.js"></script> 
