app completed/train station count

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Document</title>
+    <title>Train Station App</title>
 </head>
 <body>
-    <h1 id="count">People entered :</h1>
+    <h1>App using javaScript</h1>
+    <h1 id="count">People entered Station :</h1>
     <h2 id="count-el">0</h2>
     <button  id="increment-btn" onclick="increment()">INCREMENT</button>
     <button id="save-btn" onclick="save()">SAVE</button>
